# CSVA

./: .gitignore  CMakeLists.txt  Gemfile  LICENSE  README.md  _config.yml  about.md  another-page.html  index.html  index.md  style.scss
.sass-cache/622a1a4d0990e0e8a43c2ffe6da853a5676ee93a/: jekyll-theme-slate.scssc  rouge-github.scssc
.sass-cache/8382f24aa21af57b0e4a2470faa8354244ee9962/: _highlights.scssc  _reset.scssc  _svg-icons.scssc  _variables.scssc
_posts/: 2018-04-27-welcome-to-jekyll.markdown
_site/: 404.html  Gemfile  feed.xml  index.html  sitemap.xml  tmp
_site/about/: index.html
_site/assets/css/: style.css
_site/jekyll/update/2018/04/27/: welcome-to-jekyll.html
cmake/: macro.cmake
docker/: Dockerfile
examples/: CMakeLists.txt
examples/match_3D/: 3Drecognition.cpp  3Drecognition.h  CMakeLists.txt  main.cpp
examples/match_aero/: CMakeLists.txt  aerospace_demo.cpp  aerospace_demo.h  aerospace_demo2.cpp
modules/: CMakeLists.txt
modules/common_lib/: CMakeLists.txt  DIRENT.H  DirectoryParser.cpp  DirectoryParser.h  feature_extractors.cpp  feature_extractors.h
modules/csva_lib/: CMakeLists.txt  Cluster_data.cpp  Cluster_data.h  HoughList.cpp  HoughList.h  confidence_estimation.cpp  confidence_estimation.h  csva.cpp  csva.h  matching_hough.cpp  matching_hough.h  misc_functions.cpp  misc_functions.h
