project(csva)
include("${PROJECT_SOURCE_DIR}/cmake/macro.cmake")
include_directories(${PROJECT_SOURCE_DIR}/modules)

cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
message("${PROJECT_SOURCE_DIR}")
if (EXISTS "${PROJECT_SOURCE_DIR}/cmake/config/config.cmake")
	include("${PROJECT_SOURCE_DIR}/cmake/config/config.cmake")
endif()
if(WIN32)
  list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/config")
elseif(UNIX)
  list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/config_lin")
endif()

project (csva CXX)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_subdirectory(modules)
add_subdirectory(examples)