PROJECT( common_lib )
cmake_minimum_required (VERSION 2.6)
FIND_PACKAGE(OpenCV 3.1 REQUIRED core imgproc highgui features2d xfeatures2d ml video shape stitching calib3d)

if (UNIX)
	find_package(Boost REQUIRED COMPONENTS filesystem)
	INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
	#find_package(Eigen REQUIRED)
endif (UNIX)

if (WIN32)
	find_package(Boost REQUIRED)
	include_directories(${Boost_INCLUDE_DIRS})
	set (CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
	link_directories(${Boost_LIBRARY_DIR})
	message(${Boost_LIBRARY_DIR})
endif (WIN32)

add_compile_options(-std=c++11)
include_directories(${OpenCV_INCLUDE_DIRS})
ADD_LIBRARY(common_lib  feature_extractors.h feature_extractors.cpp)
TARGET_LINK_LIBRARIES(common_lib  ${Boost_LIBRARIES} ${TinyXML_LIBRARIES} ${OpenCV_LIBS})